--- a/tags.html
+++ b/tags.html
@@ -7,7 +7,7 @@ title: 'Tag Index'
   {% assign t = tag | first %}
   {% assign posts = tag | last %}
 
-<h2 id="tag" class="linked-section">
+<h2 id="#{{t}}" class="linked-section">
         <i class="fa fa-tag" aria-hidden="true"></i>
         &nbsp;{{ t | downcase }}&nbsp;({{site.tags[tag].size}})
 <ul>
