--- a/tags.html
+++ b/tags.html
@@ -6,7 +6,6 @@ title: 'Tag Index'
 {% for tag in site.tags %}
   {% assign t = tag | first %}
   {% assign posts = tag | last %}
-
 <h2 id="#{{t}}" class="linked-section">
         <i class="fa fa-tag" aria-hidden="true"></i>
         &nbsp;{{ t | downcase }}&nbsp;({{site.tags[tag].size}})
@@ -27,4 +26,5 @@ title: 'Tag Index'
 {% endfor %}
 <div id="full-tags-list">
 </ul>
+<a name='{{t}}'></a>
 {% endfor %}
